Fix: menu didnt hide on tablet on sroll

--- a/src/app/components/Menu/Menu.scss
+++ b/src/app/components/Menu/Menu.scss
@@ -205,7 +205,6 @@
     padding-top: 20px;
     z-index: 99;
 
-    position: fixed;
     top: 0;
     left: 0;
     right: 0;
